# greenkeeper-simulator

./: .firebaserc  .gitignore  ACCESSIBILITY.md  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  IRRIGATION_PLAN.md  PRESTIGE_AUDIT.md  SCENARIOS.md  SPEC_IMPLEMENTATION_AUDIT.md  SPEC_VS_TESTS_AUDIT.md  TODO.md  UX_OVERHAUL_PLAN.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
config/: balance.toml
crates/engine/: Cargo.toml
crates/engine/src/: decision.rs  event.rs  lib.rs  model.rs  rng.rs  systems.rs
crates/engine/tests/: sim.rs
docs/: AGENT_HARNESSES.md  ASSET_PIPELINE.md  CDT_MIGRATION_PLAN.md  COURSE_MAINTENANCE_SPEC.md  DESIGN.md  ECONOMY_SYSTEM_SPEC.md  EMPLOYEE_SYSTEM_SPEC.md  EMPLOYEE_SYSTEM_V2.md  EQUIPMENT_SYSTEM_SPEC.md  FUTURE_SYSTEMS_SPEC.md  GAME_OVERVIEW.md  IRRIGATION_SYSTEM_SPEC.md  JOB_AUTOMATION_SPEC.md  PLACEABLE_ASSETS_SPEC.md  PRESTIGE_SYSTEM_SPEC.md  RESEARCH_TREE_SPEC.md  SCENARIOS.md  TECH.md  TEE_TIME_SYSTEM_SPEC.md  TERRAIN_EDITOR_ENHANCEMENTS.md  TERRAIN_GRID_SPEC.md  TERRAIN_SHADING_SPEC.md  TERRAIN_TOPOLOGY_SPEC.md  TOURNAMENT_SYSTEM_SPEC.md  UI_AUTOMATION_LAYER.md  WEAR_AND_ROTATION_SPEC.md  WEED_CONTROL_SPEC.md  playtesting.md
eslint-rules/: no-direct-ui-interaction.mjs  no-hardcoded-ui-colors.mjs  no-hardcoded-ui-font-family.mjs  no-hardcoded-ui-font-size.mjs  no-hardcoded-ui-radius.mjs  no-manual-action-buttons.mjs  no-manual-dialog-action-bar.mjs  no-manual-dialog-labels.mjs  no-manual-dialog-sections.mjs  no-manual-horizontal-button-rows.mjs  (+9 more)
(+493 files in other folders)
